Fixed footer column collapsing on IE

--- a/CancerGov/_src/StyleSheets/_footer.scss
+++ b/CancerGov/_src/StyleSheets/_footer.scss
@@ -203,7 +203,6 @@
 
   .site-footer__icons {
     max-width: 100%;
-    min-width: 140px;
 
     li {
       margin: 6px 12px 6px 0;
